# whisper_sub

./: .gitignore  README.md  generate_icon.py  gui.py  icon.icns  main.py  pyproject.toml  video_cut.spec  whisper_sub.spec
